force-app/main/default/objects/Cita__c/Cita__c.object-meta.xml
<CustomObject>
    <description>Representa las citas reservadas por los clientes del salón.</description>
    <label>Cita</label>
    <nameField>
        <displayFormat>CITA-{0000}</displayFormat>
        <label>Número de Cita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Citas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>