force-app/main/default/objects/Cita__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relaciona la cita con el cliente (Account) que la ha reservado.</description>
    <inlineHelpText>Selecciona el cliente al que pertenece la cita.</inlineHelpText>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Citas</relationshipLabel>
    <relationshipName>Citas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>