force-app/main/default/objects/Cita__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Indica el estado actual de la cita.</description>
    <inlineHelpText>Selecciona el estado actual de la cita.</inlineHelpText>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Confirmada</fullName>
            </value>
            <value>
                <fullName>Completada</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>