force-app/main/default/objects/Cita__c/fields/Fecha_Hora__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Hora__c</fullName>
    <description>Fecha y hora programadas para la cita.</description>
    <inlineHelpText>Indica la fecha y hora en la que se realizará la cita.</inlineHelpText>
    <label>Fecha y Hora</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>