force-app/main/default/objects/Cita__c/fields/Notas__c.field-meta.xml
<CustomField>
    <fullName>Notas__c</fullName>
    <description>Observaciones adicionales relacionadas con la cita.</description>
    <inlineHelpText>Introduce cualquier información adicional relevante para la cita.</inlineHelpText>
    <label>Notas</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>