force-app/main/default/objects/Cita__c/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relaciona la cita con el servicio reservado.</description>
    <inlineHelpText>Selecciona el servicio correspondiente a la cita.</inlineHelpText>
    <label>Servicio</label>
    <referenceTo>Servicio__c</referenceTo>
    <relationshipLabel>Citas</relationshipLabel>
    <relationshipName>Citas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>