force-app/main/default/objects/Cita__c/validationRules/Fecha_Cita_No_Pasada.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_Cita_No_Pasada</fullName>
    <active>true</active>
    <description>Impide guardar una cita con una fecha y hora anteriores al momento actual.</description>
    <errorConditionFormula>AND(
     OR(
        ISNEW() ,
			  		 ISCHANGED(Fecha_Hora__c) 
      	), 	
					 Fecha_Hora__c  &lt;  NOW() 		
	)</errorConditionFormula>
    <errorDisplayField>Fecha_Hora__c</errorDisplayField>
    <errorMessage>La fecha y hora de la cita no pueden ser anteriores al momento actual.</errorMessage>
</ValidationRule>